# TL

./: .gitattributes  .gitignore  .replit  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  db-startup-recovery.md  preserve-media-view-once.md  telegram-viewer-floodwait-isolation.md  tl-perf-and-rate-limits.md
TL-Latest/: POSTGRES_SETUP.md  app.py  requirements.txt
TL-Latest/deploy/: .env.example  README.md  VPS_SETUP_INSTRUCTIONS.txt  nginx.conf  setup.sh  tgviewer.service
TL-Latest/instance/: app.db
TL-Latest/server_exports/: 4a046066-e75a-4f7b-81bd-2f3972c18f92.html  8110c124-07a4-478e-bf9f-3c65cdbeeb38.html  dcf99c54-cd25-4b10-b906-d8f9fc0e2437.html
TL-Latest/templates/: account.html  index.html  login.html
