[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.3",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==26.0.0",
    "psycopg2-binary==2.9.12",
    "pyrogram==2.0.106",
    "requests==2.32.5",
    "tgcrypto==1.2.5",
]
